--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "day1",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "src/a.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack"
