--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "style-loader": "^1.1.3",
     "url": "^0.11.0",
     "url-loader": "^3.0.0",
+    "vue": "^2.6.11",
+    "vue-loader": "^15.8.3",
+    "vue-template-compiler": "^2.6.11",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-middleware": "^3.7.2",
