--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
     "autoprefixer": "^9.7.4",
     "axios": "^0.19.2",
+    "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
     "express": "^4.17.1",
     "file-loader": "^5.0.2",
@@ -31,5 +34,7 @@
     "webpack-dev-middleware": "^3.7.2",
     "webpack-dev-server": "^3.10.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@babel/polyfill": "^7.8.3"
+  }
 }
