--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "src/a.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.pro.js",
-    "dev": "webpack-dev-server --config webpack.dev.js"
+    "build": "webpack --config ./build/webpack.pro.js",
+    "dev": "webpack-dev-server --config ./build/webpack.dev.js"
   },
   "keywords": [],
   "author": "",
